--- a/index.html
+++ b/index.html
@@ -854,8 +854,8 @@
               <div class=" portfolio-info">
                 <h4>Real-time Insights from Social Media Data</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/Real-time Insights from Social Media Data/Real-time Insights from Social Media Data.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="pages/project-datacamp-real-time-insights-from-social-media-data.html"
+                    class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -868,7 +868,7 @@
               <div class=" portfolio-info">
                 <h4>Exploring 67 years of LEGO</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/Exploring 67 years of LEGO/Exploring 67 years of LEGO.html"
+                  <a href="pages/project-datacamp-exploring-67-years-of-lego.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -883,7 +883,7 @@
               <div class=" portfolio-info">
                 <h4>The Android App Market on Google Play</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/The Android App Market on Google Play/The Android App Market on Google Play.html"
+                  <a href="pages/project-datacamp-the-android-app-market-on-google-play.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -898,7 +898,7 @@
               <div class=" portfolio-info">
                 <h4>Investigating Netflix Movies and Guest Stars in The Office</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/Investigating Netflix Movies and Guest Stars in The Office/Investigating Netflix Movies and Guest Stars in The Office.html"
+                  <a href="pages/project-datacamp-investigating-netflix-movies-and-guest-stars-in-the-office.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -913,9 +913,24 @@
               <div class=" portfolio-info">
                 <h4>A Visual History of Nobel Prize Winners</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html"
+                  <a href="pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.png"
+                class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Dr. Semmelweis and the Discovery of Handwashing</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-datacamp-dr-semmelweis-and-the-discovery-of-handwashing.html"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -955,21 +970,6 @@
                 <div class="portfolio-links">
                   <a href="pages/project-react-simple-app.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.png"
-                class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Dr. Semmelweis and the Discovery of Handwashing</h4>
-                <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/DataCamp/Dr.%20Semmelweis%20and%20the%20Discovery%20of%20Handwashing/Dr.%20Semmelweis%20and%20the%20Discovery%20of%20Handwashing.html"
-                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
