--- a/pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html
+++ b/pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html
@@ -77,41 +77,45 @@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: A Visual History of Nobel Prize Winners</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">A Visual History of Nobel Prize Winners</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: Data Science</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Data Science</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: Data Scientist</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Data Scientist</div>
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project date</strong>
                                     </div>
-                                    <div class="col-9">
-                                        : February 2024
-                                    </div><!-- Project tools -->
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">February 2023</div>
+                                </li>
+                                <!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
-                                    <div class="col-9">
-                                        : Jupyter Notebook
-                                    </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Jupyter Notebook</div>
                                 </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://github.com/maulanakavaldo/DataCamp/blob/main/A%20Visual%20History%20of%20Nobel%20Prize%20Winners/A%20Visual%20History%20of%20Nobel%20Prize%20Winners.ipynb"
-                                            target="_blank">: GitHub</a>
+                                        <a href="https://github.com/maulanakavaldo/DataCamp/blob/main/A%20Visual%20History%20of%20Nobel%20Prize%20Winners/"
+                                            target="_blank">GitHub</a>
                                     </div>
                                 </li>
                             </ul>
