--- a/pages/project-datacamp-exploring-67-years-of-lego.html
+++ b/pages/project-datacamp-exploring-67-years-of-lego.html
@@ -60,16 +60,7 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/vix-bmi.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/dashboard-bmi.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/certif_licen/vix-muamalat.png" alt=""
+                                        <img src="../assets/img/portfolio/datacamp/Exploring 67 years of LEGO.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
                                 </div>
@@ -87,35 +78,35 @@
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Sales at PT. Sejahtera Bersama</div>
+                                    <div class="col-9">Exploring 67 years of LEGO</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Data Analyst</div>
+                                    <div class="col-9">Data Science, Datacamp</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Business Intelligence Analyst</div>
+                                    <div class="col-9">Data Scientist</div>
                                 </li>
                                 <!-- Company -->
-                                <li class="list-group-item d-flex">
+                                <!-- <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Company</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://www.bankmuamalat.co.id/" target="_blank">Bank Muamalat</a>
+                                        <a href="" target="_blank"></a>
                                     </div>
-                                </li>
+                                </li> -->
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project date</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">February 2023</div>
+                                    <div class="col-9">January 2024</div>
 
                                 </li>
                                 <!-- Project tools -->
@@ -124,9 +115,7 @@
                                         <strong>Tools</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        Ms. Access, Excel, Looker Studio
-                                    </div>
+                                    <div class="col-9">Jupyter Notebook</div>
                                 </li>
                                 <!-- Project URL -->
                                 <li class="list-group-item d-flex">
@@ -135,17 +124,7 @@
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Bank%20Muamalat"
-                                            target="_blank">GitHub</a>
-                                    </div>
-                                </li>
-                                <!-- Uncomment and use as needed for other section -->
-                                <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Link</strong></div>
-                                    <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        <a href="https://drive.google.com/drive/folders/1SU-Tqe3AdU0A7xBhi561yMOJLR6OQr2v?usp=drive_link"
-                                            target="_blank">Documentation</a>
+                                        <a href="https://github.com/maulanakavaldo/DataCamp/tree/main/Exploring%2067%20years%20of%20LEGO" target="_blank">GitHub</a>
                                     </div>
                                 </li>
                             </ul>
@@ -157,19 +136,13 @@
                     <div class=""> <!--portfolio-info-->
                         <h3>Details</h3>
                         <p>
-
+                            
                         </p>
+
                         <div id="loading-message" class="center">Loading...</div>
-
-
-                        <iframe src="https://drive.google.com/file/d/1VA_pvtKNmvOZC1a-jkBgYXHhJrANzKX9/view"
-                            frameborder="0" style="width: 100%; height: 1000px;"
+                        <iframe src="https://maulanakavaldo.github.io/DataCamp/Exploring%2067%20years%20of%20LEGO/Exploring%2067%20years%20of%20LEGO.html" frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
-
-                        <!-- <iframe src="https://github.com/maulanakavaldo/Virtual-Internship/blob/main/Bank%20Muamalat/Task%205%20-%20Maulana%20Kavaldo.pdf" frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;">
-                        </iframe> -->
                     </div>
                 </div>
             </div>
