--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -135,48 +135,52 @@
                 <ul class="list-group">
                   <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Project name</strong></div>
-                    <div class="col-9">: COVID-19 Death Growth & Number of Healthcare Facilities in Indonesia</div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
+                    <div class="col-9">COVID-19 Death Growth & Number of Healthcare Facilities in Indonesia</div>
                   </li>
                   <!-- Category -->
                   <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Category</strong></div>
-                    <div class="col-9">: Data Science, COVID-19, Health</div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
+                    <div class="col-9">Data Science, COVID-19, Health</div>
                   </li>
                   <!-- Role -->
                   <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Role</strong></div>
-                    <div class="col-9">: Data Scientist</div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
+                    <div class="col-9">Data Scientist</div>
                   </li>
                   <!-- Project date -->
                   <li class="list-group-item d-flex">
                     <div class="col-3">
                       <strong>Project date</strong>
                     </div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
                     <div class="col-9">
-                      : October-November 2022
+                      October-November 2022
                     </div><!-- Project tools -->
                   <li class="list-group-item d-flex">
                     <div class="col-3">
                       <strong>Tools</strong>
                     </div>
-                    <div class="col-9">
-                      :
-                      Jupyter Notebook
-                    </div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
+                    <div class="col-9">Jupyter Notebook</div>
                   </li><!-- Project URL -->
                   <li class="list-group-item d-flex">
                     <div class="col-3">
                       <strong>Project URL</strong>
                     </div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
                     <div class="col-9">
-                      <a href="https://github.com/maulanakavaldo/THK_Project" target="_blank">: GitHub</a>
+                      <a href="https://github.com/maulanakavaldo/THK_Project" target="_blank">GitHub</a>
                     </div>
                   </li>
                   <!-- Uncomment and use as needed for other section -->
                   <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Team</strong></div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
                     <div class="col-9">
-                      <a href="https://www.linkedin.com/in/muh-khairul-gemilang/" target="_blank">: Muhammad Khairul
+                      <a href="https://www.linkedin.com/in/muh-khairul-gemilang/" target="_blank">Muhammad Khairul
                         Gemilang</a>,
                       <a href="https://www.linkedin.com/in/hellzliu/" target="_blank">Helwis Liufandy</a>,
                       <a href="https://www.linkedin.com/in/dzakiyaulya/" target="_blank">Dzakiya Ishmatul Ulya</a>,
