--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -60,48 +60,47 @@
                 <!-- Tambahkan slide gambar di sini -->
                 <div class="swiper-slide">
                   <img src="../assets/img/portfolio/web-hc-system/hc-system.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                    class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Administration - User Management List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Administration - User Management List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Master Data - GCM List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Master Data - GCM List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Master Data - GCM List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Master Data - GCM List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Role List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Role List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Administration - Resource List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Administration - Resource List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Cost Nominal List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Cost Nominal List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Rate Package List.png" alt="" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Master Data - Rate Package List.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-hc-system/Productivity - Daily Report List History.png"
-                    alt="" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" role="button"/>
+                  <img src="../assets/img/portfolio/web-hc-system/Productivity - Daily Report List History.png" alt=""
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -116,49 +115,52 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: HC System</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">HC System</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Website, Administration</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Website, Administration</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: System Analyst</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">System Analyst</div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
-                  <div class="col-3">
-                    <strong>Project date</strong>
-                  </div>
+                  <div class="col-3"><strong>Project date</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : October 2023 - Januari 2024
+                    October 2023 - Januari 2024
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
-                  <div class="col-3">
-                    <strong>Tools</strong>
-                  </div>
+                  <div class="col-3"><strong>Tools</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : Monday, Ms. Office, DBMS, Postman, Draw.io
+                    Monday, Ms. Office, DBMS, Postman, Draw.io
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
                     <a href="https://drive.google.com/drive/folders/1zfZtWp6h5ydE8zTFWcTfideCxCDyJawe?usp=drive_link"
-                      target="_blank">:
-                      Documentation</a>
+                      target="_blank">Documentation</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://technoapp.berijalan.id/login" target="_blank">: HC System </a>
+                    <a href="https://technoapp-dev.berijalan.id/hcsystem-web/administration/user-management" target="_blank">HC System (dev) </a>
+                    <a href="https://technoapp.berijalan.id/login" target="_blank">HC System (prod)</a>
                   </div>
                 </li>
               </ul>
