--- a/pages/project-datacamp-investigating-netflix-movies-and-guest-stars-in-the-office.html
+++ b/pages/project-datacamp-investigating-netflix-movies-and-guest-stars-in-the-office.html
@@ -52,7 +52,7 @@
         <!-- ======= Portfolio Details Section ======= -->
         <section id="portfolio-details" class="portfolio-details">
             <div class="container portfolio-info"> <!-- portfolio-info Disini-->
-                <div class="row align-items-stretch">
+                <div class="row">
                     <!-- Bagian slider -->
                     <div class="col-md-6">
                         <div class=""> <!-- portfolio-info Disini-->
@@ -60,17 +60,9 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/vix-bmi.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/dashboard-bmi.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/certif_licen/vix-muamalat.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                                        <img src="../assets/img/portfolio/datacamp/Investigating Netflix Movies and Guest Stars in The Office.png"
+                                            alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                                            role="button" />
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -83,31 +75,23 @@
                         <div class="">
                             <h3>Project Information</h3>
                             <ul class="list-group">
-                                <!-- Project name -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Sales at PT. Sejahtera Bersama</div>
+                                    <div class="col-9">Investigating Netflix Movies and Guest Stars in The Office
+                                    </div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Data Analyst</div>
+                                    <div class="col-9">Data Science</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Business Intelligence Analyst</div>
-                                </li>
-                                <!-- Company -->
-                                <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Company</strong></div>
-                                    <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        <a href="https://www.bankmuamalat.co.id/" target="_blank">Bank Muamalat</a>
-                                    </div>
+                                    <div class="col-9">Data Scientist</div>
                                 </li>
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
@@ -115,8 +99,7 @@
                                         <strong>Project date</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">February 2023</div>
-
+                                    <div class="col-9">December 2023</div>
                                 </li>
                                 <!-- Project tools -->
                                 <li class="list-group-item d-flex">
@@ -125,27 +108,17 @@
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        Ms. Access, Excel, Looker Studio
+                                        Jupyter Notebook
                                     </div>
-                                </li>
-                                <!-- Project URL -->
+                                </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Bank%20Muamalat"
+                                        <a href="https://github.com/maulanakavaldo/DataCamp/tree/main/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office"
                                             target="_blank">GitHub</a>
-                                    </div>
-                                </li>
-                                <!-- Uncomment and use as needed for other section -->
-                                <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Link</strong></div>
-                                    <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        <a href="https://drive.google.com/drive/folders/1SU-Tqe3AdU0A7xBhi561yMOJLR6OQr2v?usp=drive_link"
-                                            target="_blank">Documentation</a>
                                     </div>
                                 </li>
                             </ul>
@@ -154,22 +127,13 @@
                 </div>
 
                 <div class="col-lg-12 col-lg-6 mt-5">
-                    <div class=""> <!--portfolio-info-->
+                    <div class="portfolio-info">
                         <h3>Details</h3>
-                        <p>
-
-                        </p>
                         <div id="loading-message" class="center">Loading...</div>
-
-
-                        <iframe src="https://drive.google.com/file/d/1VA_pvtKNmvOZC1a-jkBgYXHhJrANzKX9/view"
+                        <iframe
+                            src="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
                             frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;">
-                        </iframe>
-
-                        <!-- <iframe src="https://github.com/maulanakavaldo/Virtual-Internship/blob/main/Bank%20Muamalat/Task%205%20-%20Maulana%20Kavaldo.pdf" frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;">
-                        </iframe> -->
+                            onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
                 </div>
             </div>
