--- a/pages/project-datacamp-the-android-app-market-on-google-play.html
+++ b/pages/project-datacamp-the-android-app-market-on-google-play.html
@@ -52,7 +52,7 @@
         <!-- ======= Portfolio Details Section ======= -->
         <section id="portfolio-details" class="portfolio-details">
             <div class="container portfolio-info"> <!-- portfolio-info Disini-->
-                <div class="row">
+                <div class="row align-items-stretch">
                     <!-- Bagian slider -->
                     <div class="col-md-6">
                         <div class=""> <!-- portfolio-info Disini-->
@@ -60,9 +60,8 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/datacamp/Investigating Netflix Movies and Guest Stars in The Office.png"
-                                            alt="" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                                            role="button" />
+                                        <img src="../assets/img/portfolio/datacamp/The Android App Market on Google Play.png" alt=""
+                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -75,44 +74,57 @@
                         <div class="">
                             <h3>Project Information</h3>
                             <ul class="list-group">
+                                <!-- Project name -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: Investigating Netflix Movies and Guest Stars in The Office
-                                    </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">The Android App Market on Google Play</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: Data Science</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Data Science, Datacamp</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: Data Scientist</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Data Scientist</div>
                                 </li>
+                                <!-- Company -->
+                                <!-- <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Company</strong></div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">
+                                        <a href="" target="_blank"></a>
+                                    </div>
+                                </li> -->
                                 <!-- Project date -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project date</strong>
                                     </div>
-                                    <div class="col-9">
-                                        : February 2023
-                                    </div><!-- Project tools -->
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">December 2023</div>
+
+                                </li>
+                                <!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
-                                    <div class="col-9">
-                                        : Jupyter Notebook
-                                    </div>
-                                </li><!-- Project URL -->
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Jupyter Notebook</div>
+                                </li>
+                                <!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
-                                            target="_blank">: GitHub</a>
+                                        <a href="https://github.com/maulanakavaldo/DataCamp/tree/main/The%20Android%20App%20Market%20on%20Google%20Play" target="_blank">GitHub</a>
                                     </div>
                                 </li>
                             </ul>
@@ -121,17 +133,16 @@
                 </div>
 
                 <div class="col-lg-12 col-lg-6 mt-5">
-                    <div class="portfolio-info">
+                    <div class=""> <!--portfolio-info-->
                         <h3>Details</h3>
+                        <p>
+                            
+                        </p>
+
                         <div id="loading-message" class="center">Loading...</div>
-                        <!-- <iframe
-                            src="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
-                            frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;"></iframe> -->
-                        <iframe
-                            src="https://github.com/maulanakavaldo/DataCamp/blob/main/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.ipynb"
-                            frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;"></iframe>
+                        <iframe src="https://maulanakavaldo.github.io/DataCamp/The%20Android%20App%20Market%20on%20Google%20Play/The%20Android%20App%20Market%20on%20Google%20Play.html" frameborder="0" style="width: 100%; height: 1000px;"
+                            onload="document.getElementById('loading-message').hidden = true;">
+                        </iframe>
                     </div>
                 </div>
             </div>
