--- a/pages/project-rock-paper-scrissor.html
+++ b/pages/project-rock-paper-scrissor.html
@@ -79,23 +79,27 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Rock, Paper and Scrissor Classification</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Rock, Paper and Scrissor Classification</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Machine Learning, Image Classification</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Machine Learning, Image Classification</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Machine Learning Developer</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Machine Learning Developer</div>
                 </li>
                 <!-- Company -->
                 <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Company</strong></div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
                     <div class="col-9">
-                        <a href="https://www.dicoding.com/" target="_blank">: Dicoding</a>,
+                        <a href="https://www.dicoding.com/" target="_blank">Dicoding</a>,
                         <a href="https://www.dicoding.com/users/maulanakavaldo/academies"
                             target="_blank">My Profile</a>
 
@@ -106,30 +110,34 @@
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : September 2023
+                    September 2023
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : Jupyter Notebook
+                    Google Colaboratory
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/dicoding_project" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/dicoding_project/tree/main/Belajar%20Machine%20Learning%20Untuk%20Pemula" target="_blank">GitHub, </a>
+                    <a href="https://colab.research.google.com/drive/17bFrXPwvZx0EINYPELnIDtImx_0hMIBP" target="_blank">Google Colaboratory</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Demo</strong></div>
                     <div class="col-9">
-                        <a href="#" target="_blank">: </a>
+                        <a href="#" target="_blank"></a>
                     </div>
                 </li> -->
               </ul>
