--- a/pages/project-vix-kimia-farma.html
+++ b/pages/project-vix-kimia-farma.html
@@ -60,16 +60,11 @@
                                 <div class="swiper-wrapper align-items-center">
                                     <!-- Tambahkan slide gambar di sini -->
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/vix-bmi.png" alt=""
+                                        <img src="../assets/img/portfolio/project-vix/" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../assets/img/portfolio/project-vix/dashboard-bmi.png" alt=""
-                                            data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
-                                    </div>
-                                    
-                                    <div class="swiper-slide">
-                                        <img src="../assets/img/certif_licen/vix-muamalat.png" alt=""
+                                        <img src="../assets/img/certif_licen/vix-kimfar.png" alt=""
                                             data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                                     </div>
                                 </div>
@@ -87,26 +82,26 @@
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Sales at PT. Sejahtera Bersama</div>
+                                    <div class="col-9">Sales at Kimia Farma</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Data Analyst</div>
+                                    <div class="col-9">Big Data</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Business Intelligence Analyst</div>
+                                    <div class="col-9">Big Data Analytics</div>
                                 </li>
                                 <!-- Company -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Company</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://www.bankmuamalat.co.id/" target="_blank">Bank Muamalat</a>
+                                        <a href="" target="_blank">Kimia Farma</a>
                                     </div>
                                 </li>
                                 <!-- Project date -->
@@ -115,7 +110,7 @@
                                         <strong>Project date</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">February 2023</div>
+                                    <div class="col-9">September 2022</div>
 
                                 </li>
                                 <!-- Project tools -->
@@ -124,9 +119,7 @@
                                         <strong>Tools</strong>
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        Ms. Access, Excel, Looker Studio
-                                    </div>
+                                    <div class="col-9">Looker Studio</div>
                                 </li>
                                 <!-- Project URL -->
                                 <li class="list-group-item d-flex">
@@ -135,8 +128,7 @@
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Bank%20Muamalat"
-                                            target="_blank">GitHub</a>
+                                        <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Kimia%20Farma%20-%20Big%20Data%20Analytics" target="_blank">GitHub</a>
                                     </div>
                                 </li>
                                 <!-- Uncomment and use as needed for other section -->
@@ -144,8 +136,8 @@
                                     <div class="col-3"><strong>Link</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://drive.google.com/drive/folders/1SU-Tqe3AdU0A7xBhi561yMOJLR6OQr2v?usp=drive_link"
-                                            target="_blank">Documentation</a>
+                                        <a href="https://datastudio.google.com/reporting/489efaa7-34e8-4374-bfec-d4aaab012eb0"
+                                            target="_blank">Dashboard</a>
                                     </div>
                                 </li>
                             </ul>
@@ -159,17 +151,11 @@
                         <p>
 
                         </p>
+
                         <div id="loading-message" class="center">Loading...</div>
-
-
-                        <iframe src="https://drive.google.com/file/d/1VA_pvtKNmvOZC1a-jkBgYXHhJrANzKX9/view"
-                            frameborder="0" style="width: 100%; height: 1000px;"
+                        <iframe src="" frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
-
-                        <!-- <iframe src="https://github.com/maulanakavaldo/Virtual-Internship/blob/main/Bank%20Muamalat/Task%205%20-%20Maulana%20Kavaldo.pdf" frameborder="0" style="width: 100%; height: 1000px;"
-                            onload="document.getElementById('loading-message').hidden = true;">
-                        </iframe> -->
                     </div>
                 </div>
             </div>
