--- a/pages/project-web-system-recommendation.html
+++ b/pages/project-web-system-recommendation.html
@@ -114,48 +114,55 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Study Program Recommendation System</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Study Program Recommendation System</div>
                 </li>
                 <!-- Tambahkan item lainnya -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Website</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Website</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Fullstack Developer (Student)</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Fullstack Developer (Student)</div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : March - June 2022
+                    March - June 2022
                   </div>
                   <!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : VSCode, DBMS, Draw.io
+                    VSCode, DBMS, Draw.io
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/Recommendation-System" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/Recommendation-System" target="_blank">GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://prodi-ahp.000webhostapp.com/">: System Recommendation System</a>
+                    <a href="https://prodi-ahp.000webhostapp.com/">System Recommendation System</a>
                   </div>
                 </li>
               </ul>
